--- a/.github/workflows/build-iso.yaml
+++ b/.github/workflows/build-iso.yaml
@@ -1,6 +1,7 @@
+name: Create Fedora Desktop ISO
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
+  pull_request:
 jobs:
   build:
     runs-on: ubuntu-latest
