--- a/.github/workflows/build-iso.yaml
+++ b/.github/workflows/build-iso.yaml
@@ -14,17 +14,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up QEMU
+    - name: Install prerequisites
       run: |
         sudo apt-get update
-        sudo apt-get install -y qemu-utils
+        sudo apt-get install -y mkisofs
     - name: Download Fedora ISO
       run: |
         wget -nv https://download.fedoraproject.org/pub/fedora/linux/releases/37/Workstation/x86_64/iso/Fedora-Workstation-Live-x86_64-37-1.7.iso
     - name: Create a working directory for the ISO
       run: |
         mkdir custom-iso
-        sudo mount -o loop Fedora-Workstation-Live-x86_64-32-1.6.iso custom-iso
+        sudo mount -o loop Fedora-Workstation-Live-x86_64-37-1.7.iso custom-iso
     - name: Modify the ISO to include custom kickstart file
       run: |
         echo "lang en_US.UTF-8
@@ -51,7 +51,7 @@ jobs:
         %end" > custom-iso/ks.cfg
     - name: Modify the boot menu to use the custom kickstart file
       run: |
-        sed -i 's/append initrd=initrd.img/append initrd=initrd.img inst.stage2=hd:LABEL=Fedora-WS-Live-32-1-6 ks=cdrom:\/ks.cfg/' custom-iso/isolinux/isolinux.cfg
+        sed -i 's/append initrd=initrd.img/append initrd=initrd.img inst.stage2=hd:LABEL=Fedora-WS-Live-37-1-7 ks=cdrom:\/ks.cfg/' custom-iso/isolinux/isolinux.cfg
     - name: Unmount the ISO
       run: |
         sudo umount custom-iso
